--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav ul li:hover {
 
 .sections {
     display: grid;
-    grid-template-rows: 0.75fr 0.6fr 0.1fr 0.7fr;
+    grid-template-rows: 0.75fr 0.7fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
@@ -46,7 +46,7 @@ nav ul li:hover {
 .section {
     position: relative;
     overflow: hidden;
-    
+
 }
 
 .section img {
@@ -68,13 +68,14 @@ nav ul li:hover {
 
 .content h1 {
     font-size: 50px;
-    color: rgba(0, 0, 0, 0.7);
+    color: rgb(255, 255, 255);
     font-family: 'Kalam', cursive;
 }
 
 .content p {
 
     text-align: center;
+    color: rgb(239, 241, 243);
 
 }
 
@@ -86,7 +87,8 @@ nav ul li:hover {
     border: 1px solid rgb(189, 178, 184);
     /* margin-top: 0.2rem; */
     background-color: rgb(220, 221, 223);
-    margin: 1rem 1rem;
+    margin: 1.5rem 1.5rem;
+    border-radius: 10px;
 
 
 }
@@ -123,8 +125,9 @@ nav ul li:hover {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    margin: 1rem 1rem;
-    margin-left: 1rem;
+    margin: 1.5rem 1.5rem;
+    border-radius: 10px;
+
     position: relative;
 }
 
@@ -141,72 +144,79 @@ nav ul li:hover {
     padding-top: 0.5rem;
 }
 
-.card {
-    position: relative;
-    overflow: hidden;
-    height: 30rem;
-
-}
-
-.card div img {
-    width: 98%;
-    margin: auto;
-    object-fit: cover;
-    z-index: 1;
-
-
-}
-
-.card div h3 {
-    display: inline-block;
-
-    position: absolute;
+.see-my-movies {
+    margin-top: 3%;
+    margin-bottom: 05%;
     text-align: center;
-    width: 50%;
-    background-color: rgb(233, 230, 227);
-    left: 25%;
 }
 
-.movie {
-    grid-column: 1/5;
-    text-align: center;
-
-    margin-top: 2rem;
-    margin-bottom: 3rem;
-}
-
-.movie button {
+.see-my-movies button {
+    text-decoration: none;
     font-size: large;
     background: none;
-    border: rgb(78, 77, 77);
+    border: none;
 }
 
-.movie button:hover {
-    color: #3669f4;
+.see-my-movies button:hover {
+    color: #1662c5;
     cursor: pointer;
 }
 
-.see-more {
+.mymovie {
+    display: flex;
+    flex-basis: 25% 25% 25% 25%;
+    margin: 0% 2%;
+    /* background-color: rgb(197, 200, 204); */
+    /* border: 1px solid rgb(27, 92, 212); */
+}
+
+.mymovie div img {
+    max-width: 100%;
+    height: 32rem;
+    object-fit: cover;
+    padding: 2%;
+
+}
+
+.mymovie div {
+    position: relative;
+
+}
+
+.mymovie div h3 {
+    display: flex;
     position: absolute;
-    height: 5rem;
-    width: 100%;
+
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: aliceblue;
+    width: 60%;
     text-align: center;
-    margin-top: 2rem;
-    margin-bottom: 5rem;
+    justify-content: center;
 
+    color: #124dbd;
 }
 
-.see-more a {
+.see-more {
     text-decoration: none;
-    color: rgb(37, 36, 36);
-    align-items: center;
+    text-align: center;
+    margin-top: 02%;
+
 }
 
+.see-more button {
+    text-decoration: none;
+    background: none;
+    border: none;
+    font-size: large;
 
+}
 
-
-
-
+.see-more button:hover {
+    color: #1662c5;
+    cursor: pointer;
+}
 
 
 
